Sentry installed and configured

--- a/web/Gemfile
+++ b/web/Gemfile
@@ -21,6 +21,9 @@ gem 'autonumeric-rails'
 gem 'money-rails'
 gem 'aasm'
 
+# Error monitoring
+gem 'sentry-raven'
+
 # PDF generation
 gem 'wicked_pdf'
 
