All Docker Compose files have been updated to V2

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,7 +1,9 @@
-db:
-  ports:
-    - "5432:5432"
+version: "2"
+services:
+  db:
+    ports:
+      - "5432:5432"
 
-web:
-  volumes:
-  - ./web:/app/user
+  web:
+    volumes:
+    - ./web:/app/user
