--- a/web/Gemfile
+++ b/web/Gemfile
@@ -29,7 +29,7 @@ gem 'sentry-raven'
 gem 'wicked_pdf'
 
 # Server
-gem 'passenger'
+gem 'puma'
 
 # V8 JavaScript interpreter for asset compilcation
 gem 'therubyracer'
