Rails app debug mode over the DEBUG environment variable

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -5,5 +5,7 @@ services:
       - "5432:5432"
 
   web:
+    environment:
+      DEBUG: "true"
     volumes:
-    - ./web:/app/user
+      - ./web:/app/user
