--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,8 +3,9 @@ stages:
 
 test:
   stage: test
-  script: >
-    docker-compose run --rm web rspec
+  script:
+    - docker-compose run --rb web rake db:create
+    - docker-compose run --rm web rspec
 
 after_script:
   - docker-compose down
