gitlab ci builds docker images prior running tests

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,15 @@
 stages:
+  - build
   - test
+
+build:
+  stage: build
+  script:
+    - docker-compose build
 
 test:
   stage: test
   script:
-    - docker-compose build
     - docker-compose run --rb web rake db:create
     - docker-compose run --rm web rspec
 
