gitlab cd manifest

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ stages:
   - build
   - test
   - release
+  - deploy
 
 variables:
   CONTAINER_RELEASE_IMAGE: $CI_REGISTRY_IMAGE:$CI_BUILD_REF_NAME
@@ -30,3 +31,17 @@ release:
     - docker tag ipsapp_app $CONTAINER_RELEASE_IMAGE
     - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $CI_REGISTRY
     - docker push $CONTAINER_RELEASE_IMAGE
+
+staging:
+  stage: deploy
+  environment: staging
+  script: >
+    docker run --rm
+    --volume /home/ansible/.ssh/ips-staging.pem:/app/user/.ssh/ips-staging.pem:ro
+    --env ANSIBLE_VAULT_PASSWORD=$ANSIBLE_VAULT_PASSWORD
+    --env DO_API_TOKEN=$DO_API_TOKEN
+    --env DOCKER_LOGIN_USERNAME=$DOCKER_LOGIN_USERNAME
+    --env DOCKER_LOGIN_PASSWORD=$DOCKER_LOGIN_PASSWORD
+    ips-ansible deploy:staging
+  only:
+    - develop
