--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -8,6 +8,8 @@ services:
   app:
     environment:
       DEBUG: "true"
+    ports:
+      - "80:9292"
     volumes:
       - .:/app/user
     ports:
