Database connection configuration over RAILS_ENV environment variable

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -12,12 +12,12 @@ services:
       - ips
 
   app:
-    container_name: app:latest
+    container_name: app
     build: .
     networks:
       - ips
     environment:
       RAILS_ENV: test
-      DATABASE_URL: postgresql://postgres:@db/ips
+      DATABASE_URL: postgresql://postgres:@db/ips-test
     depends_on:
       - db
