--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,6 @@ services:
     networks:
       - ips
     environment:
-      DATABASE_URL: postgresql://postgres:@db/ips
+      DATABASE_URL: postgresql://postgres:@db/ips-development
     depends_on:
       - db
