GitLab CI manifest is modified so it removes compiled assets.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,7 @@ test:
   script:
     - docker-compose -f docker-compose.test.yml run --rm app rspec
   after_script:
+    - docker-compose -f docker-compose.test.yml run --rm app rake assets:clobber
     - docker-compose -f docker-compose.test.yml down
 
 release:
