--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,6 +32,9 @@ release:
     - docker tag ipsapp_app $CONTAINER_RELEASE_IMAGE
     - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $CI_REGISTRY
     - docker push $CONTAINER_RELEASE_IMAGE
+  only:
+    - develop
+    - master
 
 staging:
   stage: deploy
