--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,7 @@ test:
   script:
     - docker-compose -f docker-compose.test.yml run --rm app rspec
   after_script:
-    - docker-compose -f docker-compose.test.yml run --rm app rake assets:clobber
+    - docker-compose -f docker-compose.test.yml run --rm app rake tmp:clear
     - docker-compose -f docker-compose.test.yml down
 
 release:
