--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -10,8 +10,6 @@ services:
     image: postgres:9.4.5
     networks:
       - ips
-    ports:
-      - "5432:5432"
 
   app:
     container_name: app
@@ -19,12 +17,7 @@ services:
     networks:
       - ips
     environment:
-      DEBUG: "true"
-      DATABASE_URL: postgresql://postgres:@db/ips-development
-      EMAIL_SENDER: ips@pieoneers.com
-    volumes:
-      - .:/app/user
-    ports:
-      - "80:9292"
+      RAILS_ENV: test
+      DATABASE_URL: postgresql://postgres:@db/ips-test
     depends_on:
       - db
