Insurance policies merge modified

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     networks:
       - ips
     environment:
-      DEBUG: "true"
+      RAILS_ENV: staging
       DATABASE_URL: postgresql://postgres:@db/ips-development
       EMAIL_SENDER: ips@pieoneers.com
     volumes:
