--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,25 +1,9 @@
 version: "2"
 
-networks:
-  ips:
-    driver: bridge
-
 services:
-  db:
-    container_name: db
-    image: postgres:9.4.5
-    networks:
-      - ips
-
   app:
-    container_name: app
-    build: .
-    networks:
-      - ips
+    command: test
     environment:
-      RAILS_ENV: test
       DATABASE_URL: postgresql://postgres:@db/ips-test
     volumes:
       - .:/app/user
-    depends_on:
-      - db
