GitLab CI manifest updated so it creates test database before running tests.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,8 @@ test:
   script:
     - docker-compose -f docker-compose.yml -f docker-compose.ci.yml up -d db
     - docker-compose -f docker-compose.yml -f docker-compose.ci.yml run --rm wait_for
-    - docker-compose -f docker-compose.yml -f docker-compose.ci.yml run --rm app
+    - docker-compose -f docker-compose.yml -f docker-compose.ci.yml run --rm app rake db:setup
+    - docker-compose -f docker-compose.yml -f docker-compose.ci.yml run --rm app test
   after_script:
     - docker-compose -f docker-compose.yml -f docker-compose.ci.yml down
 
