--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,7 +34,6 @@ release:
     - docker tag ips-app $DOCKER_IMAGE
     - docker push $DOCKER_IMAGE
   only:
-    - develop
     - master
 
 staging:
@@ -55,7 +54,7 @@ staging:
     --env DOCKER_IMAGE=$DOCKER_IMAGE
     $DOCKER_IMAGE_ANSIBLE deploy:staging
   only:
-    - develop
+    - master
 
 production:
   stage: deploy
@@ -76,3 +75,4 @@ production:
     $DOCKER_IMAGE_ANSIBLE deploy:production
   only:
     - master
+  when: manual
