--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,6 +34,7 @@ release:
     - docker tag ips-app $DOCKER_IMAGE
     - docker push $DOCKER_IMAGE
   only:
+    - develop
     - master
 
 staging:
@@ -54,7 +55,7 @@ staging:
     --env DOCKER_IMAGE=$DOCKER_IMAGE
     $DOCKER_IMAGE_ANSIBLE deploy:staging
   only:
-    - master
+    - develop
 
 production:
   stage: deploy
