--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -3,7 +3,7 @@ version: "2"
 services:
   app:
     environment:
-      DATABASE_URL: postgresql://postgres:@db/ips-development
+      DATABASE_URL: postgresql://postgres:@db/ips
       EMAIL_SENDER: ips@pieoneers.com
     volumes:
       - .:/app/user
